tests/machine/x/hs/group_by_conditional_sum.error

/workspace/mochi/tests/machine/x/hs/group_by_conditional_sum.hs:179:1: error:
    Multiple declarations of ‘items’
    Declared at: /workspace/mochi/tests/machine/x/hs/group_by_conditional_sum.hs:42:37
                 /workspace/mochi/tests/machine/x/hs/group_by_conditional_sum.hs:179:1
    |
179 | items = [Map.fromList [("cat", VString ("a")), ("val", VInt (10)), ("flag", VBool (True))], Map.fromList [("cat", VString ("a")), ("val", VInt (5)), ("flag", VBool (False))], Map.fromList [("cat", VString ("b")), ("val", VInt (20)), ("flag", VBool (True))]]
    | ^^^^^


Context around line 179:
  177|            in _writeOutput path text
  178| 
  179| items = [Map.fromList [("cat", VString ("a")), ("val", VInt (10)), ("flag", VBool (True))], Map.fromList [("cat", VString ("a")), ("val", VInt (5)), ("flag", VBool (False))], Map.fromList [("cat", VString ("b")), ("val", VInt (20)), ("flag", VBool (True))]]
  180| 
  181| result = map snd (List.sortOn fst [(key (g), Map.fromList [("cat", VString (key (g))), ("share", VDouble ((sum [0 | x <- g] / sum [fromMaybe (error "missing") (Map.lookup "val" (x)) | x <- g])))]) | g <- _group_by [(i) | i <- items] (\(i) -> fromMaybe (error "missing") (Map.lookup "cat" i))])
